# Smooth

./: CMakeLists.txt
.VSCodeCounter/2023-03-15_16-52-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-03-20_14-51-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-03-22_16-50-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
engine/: CMakeLists.txt
engine/asset/global/: rendering.global.json
engine/configs/deployment/: SmoothEditor.ini
engine/configs/development/: SmoothEditor.ini
engine/shader/: Coor.fs  Coor.vs  model_loading.fs  model_loading.vs  skybox.vs
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h  editor_global_context.h  editor_input_manager.h  editor_language.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/source/: editor.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_language.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/: math.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/input/: input_system.cpp  input_system.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/source/runtime/resource/global/: global_rendering.h
engine/source/runtime/tool/global/: global_context.cpp  global_context.h
engine/source/runtime/tool/input/: input_system.cpp  input_system.h
engine/source/runtime/tool/render/: default_camera.cpp  default_camera.h  mesh.h  model.h  render_camera.cpp  render_camera.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_piprline_base.h  render_system.cpp  render_system.h  shader.h  window_system.cpp  window_system.h
engine/source/runtime/tool/render/legacy/: mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h
engine/source/runtime/tool/render/passes/: ui_pass.cpp  ui_pass.h
engine/source/runtime/tool/ui/: window_ui.h
engine/template/: commonReflectionFile.mustache
